<?xml version="1.0" encoding="utf-8"?>
<!--
ST42 課題03 ToDo改造2
res/values/string.xmlファイル
-->
<resources>
    <string name="app_name">牛丼メニュー改</string>
    <string name="yen">円</string>
    <string name="menu_list_don">牛丼</string>
    <string name="menu_list_curry">カレー</string>
    <string name="dialog_confirm_title">ご注文</string>
    <string name="dialog_confirm_message">「%1$s」(%2$s円)を注文します。\nよろしいですか?</string>
    <string name="dialog_confirm_btn_positive">注文</string>
    <string name="dialog_confirm_btn_negative">キャンセル</string>


<!--    <string name="app_name">ToDo</string>-->

    <!-- used in activity_main -->
    <string name="tv_main_pagename">タスクリスト</string>
    <string name="tv_main_deadline">期限：</string>
    <!-- menu -->
    <string name="menu_main">絞り込み</string>
    <string name="menu_main_unfinished">未完了のタスク</string>
    <string name="menu_main_finished">完了タスク</string>
    <string name="menu_main_all">全てのタスク</string>

    <!-- used in activity_todo -->
    <string name="tv_todo_add_pagename">タスク情報登録</string>
    <string name="tv_todo_edit_pagename">タスク情報編集</string>
    <string name="tv_todo_name">タスク名:</string>
    <string name="tv_todo_deadline">期限:</string>
    <string name="tv_todo_calendar">カレンダーから選択</string>
    <string name="tv_todo_done">完了タスク:</string>
    <string name="tv_todo_note">詳細:</string>
    <!-- dialog -->
    <string name="dialog_title">削除の確認</string>
    <string name="dialog_message">このタスクを削除します。よろしいですか？</string>
    <string name="dialog_positive">削除</string>
    <string name="dialog_negative">キャンセル</string>
    <!-- toast -->
    <string name="toast_empty">タスク名が空白です。</string>
</resources>